# OnlineStore_Django

./: .env.example  README.md  auth_fixture.json  blogpost_fixture.json  category_fixture.json  group_fixture.json  product_fixture.json  pyproject.toml  requirements.txt  user_fixture.json
blog/: admin.py  models.py  urls.py  views.py
blog/management/commands/: add_blogs.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: base.html  blogpost_confirm_delete.html  blogpost_detail.html  blogpost_form.html  blogpost_list.html  header.html
catalog/: admin.py  forms.py  models.py  urls.py  views.py
catalog/management/commands/: add_products.py
catalog/migrations/: 0001_initial.py  0002_contact.py  0003_alter_product_options.py  0004_product_publication.py  0005_product_owner_alter_product_category.py
catalog/templates/catalog/: base.html  contacts.html  footer.html  header.html  home.html  product_add.html  product_confirm_delete.html  product_detail.html  product_form.html
config/: settings.py  urls.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: add_groups.py
users/migrations/: 0001_initial.py  0002_alter_customuser_options.py
users/templates/users/: login.html  register.html
